<resources>
    <string name="app_name">myousic</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="party_id">Party ID:</string>
    <string name="submit">Submit</string>
    <string name="queue">Party Playlist</string>
    <string name="queue2">Party Playlist: </string>
    <string name="add">Add Song</string>
    <string name="options">Options</string>
    <string name="search_hint">Song, artist, or album</string>
    <string name="table_empty_main">No songs queued.  Add a song to listen to it next!</string>
    <string name="table_empty_bg">Create or import a background playlist to avoid awkward silence.</string>
    <string name="click_instructions">Click a title to add it to the party queue.</string>
    <string name="choose_party_name">MyParty123</string>

    <string name="table_song">Song</string>
    <string name="table_artist">Artist</string>

    <string name="clientID">dd2b9841d81d4b95938909baf24604f6</string>

    <string name="party_name">Party name</string>
    <string name="background">Background playlist</string>
    <string name="background_title">Background Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="import_playlist">Import</string>
    <string name="blacklist">Blacklist</string>
    <string name="manage">Manage</string>
    <string name="delete_queue">Delete Queue</string>
    <string name="delete_background_playlist">Delete Background Playlist</string>

    <string name="enter_party_id">New party ID</string>
    <string name="change_party_warning">Warning: changing the party ID will delete the old party!</string>
    <string name="change_party">Change Party ID</string>

    <string name="not_logged_in_1">Please log in to your Spotify account.</string>
    <string name="not_logged_in_2">Login</string>
    <string name="not_logged_in_3">Note: a premium account is required for creating a party.</string>
</resources>
