<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.myousic.activities.ActivityOptions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage"
        android:textSize="@dimen/title_1"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/options_menu_padding"/>

    <Button
        android:onClick="deleteBackgroundPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:text="@string/delete_background_playlist"
        android:textSize="@dimen/big_button_text"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:onClick="deleteQueue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:text="@string/delete_queue"
        android:textSize="@dimen/big_button_text"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>
