<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.myousic.activities.ActivityOptions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="@dimen/title_1"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/options_menu_padding"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_marginTop="@dimen/options_menu_padding"
            android:layout_marginBottom="@dimen/options_menu_padding">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/big_button_text"
                android:text="@string/party_name"
                android:textColor="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_arrow"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/options_menu_padding"
            android:layout_marginBottom="@dimen/options_menu_padding">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/big_button_text"
                android:text="@string/background"
                android:textColor="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_arrow"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="@dimen/options_menu_padding"
            android:layout_marginBottom="@dimen/options_menu_padding">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/big_button_text"
                android:text="@string/blacklist"
                android:textColor="@color/colorAccent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_arrow"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
