<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_queue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context="com.myousic.activities.ActivityQueue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_id"
            android:textSize="@dimen/title_1"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/party_id_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_1"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/options"
            android:textSize="@dimen/big_button_text"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="options"/>

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/add"
            android:textSize="@dimen/big_button_text"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="addSong" />

    </LinearLayout>

    <TextView
        android:id="@+id/empty_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_empty_main"
        android:textAlignment="center"
        android:textSize="@dimen/table_text"
        android:padding="@dimen/queue_padding"
        android:textColor="@color/colorAccent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">
        <com.myousic.widgets.WidgetInteractiveTable
            android:id="@+id/queue_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/queue_padding"
            android:showDividers="middle"
            android:divider="@drawable/row_shape">

        </com.myousic.widgets.WidgetInteractiveTable>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/table_margin"
        android:background="@drawable/button_primary"
        android:text="@string/delete_queue"
        android:onClick="deleteQueue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/Dark">

        <RelativeLayout
            android:id="@+id/now_playing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"/>

        <Button
            android:id="@+id/play_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@mipmap/play_button"/>
        <Button
            android:id="@+id/pause_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:background="@mipmap/pause_button"/>
        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:background="@mipmap/skip_button"/>
    </LinearLayout>
</LinearLayout>
